2001-12-10 (Thomas Huth):
  * Wrote a first version of the graphical user interface.
  * The path where Hatari searches its data (TOS-image etc.)
    can now be specified in the Makefile.

2001-10-10 (Thomas Huth):  *** Version 0.11 ***
  * Changed some C++ comments to C comments (for plain ANSI-C compilers).
  * Fixed a stack problem in gemdos.c

2001-09-20 (Thomas Huth):
  * Added screen flipping in fullscreen mode (-> more speed!).
  * ST-Med/ST-Low mixed mode now works (e.g. in the Magnetic
    Scrolls adventures).

2001-09-09 (Sven de Marothy):
  * Added hard-drive emulation, (option -e or --harddrive)
  * Fixed annoying key clicks during boot.

2001-08-16 (Thomas Huth):  *** Version 0.10a ***
  * Improved CPU cycles emulation. Most instructions now return the
    right cycles, I hope.
  * Added Spec512 support.

2001-07-21 (Thomas Huth):
  * Added some shortcuts
  * Added the possibility to switch between fullscreen and window mode.
  * Started working on better CPU cycles emulation (well, they are
    a real mess!).

2001-07-11:
  * Added ST Medium resolution.

2001-07-10:
  * Added Sven's debugger patch.

2001-06-26:
  * Added Sven de Marothy's screenshot patch. It allows taking screenshots
    by pressing ALTGR-G.

2001-06-10 (Thomas Huth):
  * Added sound support. Does not yet work perfect, but at least there
    are some noises now :-) (Use option --sound to enable it).

2001-06-01 (Thomas Huth):  *** Version 0.05a ***
  * Added joystick emulation.
  * Added Stefan's patch for ST-LOW res on big-endian machines,
    his patch for also leaving Hatari by pressing F12, and
    his fullscreen patch.
  * Changed all tabulator characters in the source to spaces.

2001-05-27 (Thomas Huth):  *** Version 0.04a ***
  * Added Stefan Berndtsson's patch for big-endian machines.
    Hatari now runs also with non-x86 Linux machines! Thanks Stefan!
  * Rewrote the ST-LOW resolution conversation routines in C
    => ST-LOW now works!